# Sevx_Server

./: Cargo.toml  README.md
sql/: SevenBox.sql  test.sql
src/: db_access.rs  error.rs  handlers.rs  log.rs  main.rs  routers.rs  state.rs
src/db_access/: animation_db.rs  auth_db.rs  comic_db.rs  course_db.rs  film_db.rs  mod.rs  music_db.rs  novel_db.rs  sv_db.rs  tv_db.rs
src/handlers/: animation_handler.rs  auth_handler.rs  comic_handler.rs  course_handler.rs  film_handler.rs  mod.rs  music_handler.rs  novel_handler.rs  sv_handler.rs  tv_handler.rs
src/models/: animation_model.rs  auth_model.rs  comic_model.rs  course_model.rs  film_model.rs  mod.rs  music_model.rs  novel_model.rs  sv_model.rs  tv_model.rs
src/routers/: animation_router.rs  auth_router.rs  comic_router.rs  course_router.rs  film_router.rs  mod.rs  music_router.rs  novel_router.rs  sv_router.rs  tv_router.rs
