[package]
name = "sevx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0.136", features = ["derive"]}
chrono = { version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
sqlx = { version = "0.5.13", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
]}